info.txt
error:
 python procesar_pendientes.py
Traceback (most recent call last):
  File "C:\D\Proyectos\GestionDocumental\n8n-local\app\procesar_pendientes.py", line 12, in <module>
    from core.classifier import extract_basic_fields
  File "C:\D\Proyectos\GestionDocumental\n8n-local\app\core\classifier.py", line 56
    return "otro"def detect_document_type(text: str, original_name: str) -> str:
                 ^^^
SyntaxError: invalid syntax
(venv) 
BBTI 01@PROGRAMACION MINGW64 /c/D/Proyectos/GestionDocumental/n8n-local/app (master)
$ 
revisar el documento procesar_pendientes.py